--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "form-score",
   "description": "Webcomponent form-score following open-wc recommendations",
   "license": "MIT",
-  "author": "form-score",
+  "author": "Dejan Lukic",
+  "homepage": "https://dejan9393.github.io/form-score/",
   "version": "0.0.0",
   "scripts": {
     "build": "rimraf dist && tsc && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
     "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
     "analyze": "cem analyze --litelement",
-    "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\""
+    "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@maicol07/mwc-card": "^0.25.2-1",
@@ -30,8 +33,10 @@
     "babel-plugin-template-html-minifier": "^4.1.0",
     "concurrently": "^5.3.0",
     "deepmerge": "^4.2.2",
+    "gh-pages": "^3.2.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-workbox": "^6.2.0",
     "tslib": "^2.3.1",
