--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,10 +1,10 @@
 {
   "short_name": "Form Score",
   "name": "Form Score",
-  "start_url": "/?source=pwa",
+  "start_url": "/form-score/?source=pwa",
   "background_color": "#3367D6",
   "display": "standalone",
-  "scope": "/",
+  "scope": "/form-score/",
   "theme_color": "#3367D6",
   "description": "Create a form and calculate scores",
   "icons": [
